Get a lot of the core backend established
